--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0F9C58</color>
-    <color name="colorPrimaryDark">#0B7F43</color>
+    <color name="colorPrimary">#FFFFFFFF</color>
+    <color name="colorPrimaryDark">#FFF0F0F0</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
@@ -11,4 +11,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bg_common">#FFF0F2F1</color>
     <color name="light_white">#CCFFFFFF</color>
+
+    <color name="main_tab_bg">#FFF0F0F0</color>
+    <color name="text_tab_color">#66979799</color>
 </resources>
